syntax = "proto3";
import "DtoTypes.proto";

option csharp_namespace = "SetupService";

package SetupService;

service SetupService {
	rpc GetQstSetupsByUserIdAndName(GetQstSetupsByUserIdAndNameRequest) returns (ListOfQstSetup);
	rpc GetColumnWidthsForGrid(GetColumnWidthsForGridRequest) returns (ListOfQstSetup);
	rpc InsertOrUpdateQstSetups(InsertOrUpdateQstSetupsRequest) returns (ListOfQstSetup);
}

message GetQstSetupsByUserIdAndNameRequest {
	int64 userId = 1;
	string name = 2;
} 

message GetColumnWidthsForGridRequest {
	int64 userId = 1;
	string gridName = 2;
	repeated string columns = 3;
} 

message InsertOrUpdateQstSetupsRequest {
	repeated QstSetup setupList = 1;
	bool returnList = 2;
}

message ListOfQstSetup {
	repeated QstSetup setupList = 1;
} 